<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtFullname"
        android:inputType="textPersonName"
        tools:ignore="Autofill,HardcodedText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtPhoneNumber"
        android:inputType="number"
        tools:ignore="Autofill,HardcodedText,TextFields"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtAddress"
        android:inputType="text"
        tools:ignore="Autofill,HardcodedText"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">
        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btnSave"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/button_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btnDelete"
            tools:ignore="ButtonStyle" />
        <Button
            android:id="@+id/button_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnRead"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/txtTittle"
        />

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>